update to latest version

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@ function getNextDay(date){
 
 <div id="left">
 	
- 
+  <br>
   <h2>Background</h2>
-	<p>Leicester City Supporters' Club (London Branch) was founded prior to the 1977-78 
+<p>Leicester City Supporters' Club (London Branch) was founded prior to the 1977-78 
 	  season and covers primarily London and its 
 	  bordering counties.</p>
 	<h2>Travel</h2>
-	<p>The core activity of the club is centred round travelling together to home and away matches. Most journeys are by train with discounted trips being organised outside the Network South East region. A fast train to Leicester takes just over an hour (hopefully) from London St Pancras. The fare for 2016-17 is £38.00 return – including a reserved seat. This is a flexible off-peak ticket and no payment is required if a match date or time is moved.
+	<p>The core activity of the club used to be centred around travelling together to home and away matches. However for most journeys by train now group travel is less of a saving so most supporters are now making their own arrangements. However if you would like to meet to travel together please get in touch.
     </p>
 	<h2>Social</h2>
 	<p>The club has a darts team and we play against London Branches of other Supporters'
@@ -66,16 +66,19 @@ function getNextDay(date){
 	<p>If you are interested in joining the branch or travelling with us please contact <br>
 	  Kevin
 	  Wells on 01279 416522 (Home), 01279 427431 (Work) or e-mail him on <a href="mailto: kwells@gwc-accountants.co.uk ">kwells@gwc-accountants.co.uk</a></p>
-	<p>Membership for 2016/17 will be £5.00 but will only be charged to members who travel with the London Foxes. The membership fee will be collected on the first occasion that you will travel with us during the season.</p>
+	<p>Membership for 2019/20 will be £5.00 but will only be charged to members who travel with the London Foxes. The membership fee will be collected on the first occasion that you will travel with us during the season.</p>
 </div>
 <div id="right">
 <div id="white">
-	<h3>PREMIER LEAGUE CHAMPIONS!!! <br>on the road this season</h3>
+	<h3>LEICESTER CITY FC <br>on the road 2021-2022</h3>
 	<p><br>
-	  Why not join the London Foxes travelling around the country (and Europe) this season – as Premier League Champions. Please get in touch with <a href="mailto: kwells@gwc-accountants.co.uk ">Kevin Wells</a> for more information.</p>
+	  Why not join the London Foxes travelling around the country again this season. Please get in touch with <a href="mailto: kwells@gwc-accountants.co.uk ">Kevin Wells</a> for more information.</p>
 </div>
 
   <p id="fixtures" class="bold">
+
+   <br>
+  
   </p>
 
   <div id="white">
