--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,15 @@
 
 
 <div id="left">
+
+<h2> PAUL TAYLOR 
+ 1953-2017
+<img src="images/PaulTaylor.jpg" width="260" border="0" alt="">
+<p> Rest In Peace Paul
+no greater Leicester City fan!
+
+
+
 	<h2> London Foxes at the <br>
 Walkers Stadium </h2>
 	<p> The London Foxes enjoying the
@@ -29,14 +38,9 @@ Pictures 2 and 3 are from previous seasons. LCFC entertain the London Foxes befo
 <br>
 </p>
 
-
-	</div>
-
-<img src="images/LondonFoxes09small.gif" width="520" border="0" alt=""><br><br>
-<img src="images/P2031154_72dpi.gif" width="520" border="0" alt=""><br><br>
-<img src="images/Jane1.gif" width="520" border="0" alt="">
-
-</div>
+<img src="images/LondonFoxes09small.gif" width="260" border="0" alt="">
+<img src="images/P2031154_72dpi.gif" width="260" border="0" alt="">
+<img src="images/Jane1.gif" width="260" border="0" alt="">
 </body>
 </html>
 
